--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bot for taking surveys",
   "main": "lib/index.js",
   "engines": {
-    "node": ">=8.1.4"
+    "node": "=8.1.4"
   },
   "scripts": {
     "prod": "node lib/index.js",
@@ -31,7 +31,6 @@
     "async-retry": "^1.1.4",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.22.1",
-    "babel-eslint": "^7.2.3",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.26.0",
